--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a href="./images/12.png">Task-12</a>
         </div>
         <div>
-            <a href="/task-13.html">Task-13</a>
+            <a href="./task-13.html">Task-13</a>
             <a href="./images/14.png">Task-14</a>
             <a href="./images/15.png">Task-15</a>
             <a href="./images/16.png">Task-16</a>
